# johan-palomino-de-task

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  hello.py  pyproject.toml
new_york_times/: dbt_project.yml  profiles.yml
new_york_times/models/: sources.yml
new_york_times/models/analytics/: jake_pete_books.sql  publisher_rankings.sql  top_book_2022.sql  top_lists_least_books.sql
new_york_times/models/marts/: dim_books.sql  dim_books.yml  dim_lists.sql  dim_lists.yml  fact_books_ranking.yml  fact_books_rankings.sql  facts_books_ranking.sql
new_york_times/models/staging/: stg_raw_books.sql  stg_raw_lists.sql  stg_raw_results.sql
new_york_times/results/: jake_pete_books_202501170525.csv  publisher_rankings_202501170526.csv  top_book_2022_202501170526.csv  top_lists_least_books_202501170526.csv
src/ingestion/: cli.py  data_ingestion.py  data_models.py  data_retrieval.py  ddl.py  exceptions.py
tests/: test_cli.py  test_data_models.py  test_data_retrieval.py
